# AxDCT

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  mutant_show_dir
bellerophon/: bellero_celltype_list.h  bellero_nablist.h  bellerophon_functions.cpp  compile_commands.json  dct_oracle.txt  doe  gaconfig.param  launch_bellerophon
bellerophon/BAS08/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon
bellerophon/BAS09/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon
bellerophon/BAS11_0/: bellerophon_functions.cpp  compile_commands.json
bellerophon/BAS11_05/: bellerophon_functions.cpp  compile_commands.json
bellerophon/BAS11_1/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon
bellerophon/BAS11_2/: bellerophon_functions.cpp  compile_commands.json
bellerophon/BC12/: bellerophon_functions.cpp  compile_commands.json  doe  launch_bellerophon
bellerophon/CB11/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon
bellerophon/PEA12/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon
bellerophon/PEA14/: bellerophon_functions.cpp  compile_commands.json  launch_bellerophon
chimera/: conf.csv  launch_chimera.sh
code/: CMakeLists.txt
code/docker/: Dockerfile  build_axdct_docker  configure_environment  run_axdct_docker
code/docker/scripts/: install_dependencies  install_libraries  install_llvm391  install_opencv  install_paradisEO
code/include/: algorithms_list.h  main.h  user_defines.h
code/include/algorithms/: AxDCT_algorithm.h  BAS08.h  BAS09.h  BAS11.h  BC12.h  CB11.h  PEA12.h  PEA14.h
code/include/core/: dct.h  metrics.h
code/include/metrics/: ad_metric_eval.h  dssim_metric_eval.h  md_metric_eval.h  metrics.h  mse_metric_eval.h  mssim_metric_eval.h  psnr_metric_eval.h
code/include/mutants_eval/: celltype_list.h  nablist.h
code/include/utils/: generic_utils.h  mat_operations.h
code/include/zybo_drivers/: bas08_zybo.h  bas09_zybo.h  bas11_zybo.h  bc12_zybo.h  cb11_zybo.h  pea12_zybo.h  pea14_zybo.h  zybo_dssim_metric_eval.h  zybo_md_metric_eval.h  zybo_psnr_metric_eval.h
code/include/zybo_drivers/zybo_metrics/: zybo_ad_metric_eval.h  zybo_dssim_metric_eval.h  zybo_md_metric_eval.h  zybo_mse_metric_eval.h  zybo_mssim_metric_eval.h  zybo_psnr_metric_eval.h
code/src/: CMakeLists.txt  axdct.cpp  image_eval.cpp  main.cpp  psnr.cpp
code/src/algorithms/: AxDCT_algorithm.cpp  BAS08.cpp  BAS09.cpp  BAS11.cpp  BC12.cpp  CB11.cpp  CMakeLists.txt  PEA12.cpp  PEA14.cpp
code/src/core/: CMakeLists.txt  dct.cpp  metrics.cpp
code/src/metrics/: CMakeLists.txt  ad_metric_eval.cpp  dssim_metric_eval.cpp  md_metric_eval.cpp  metrics.cpp  mse_metric_eval.cpp  mssim_metric_eval.cpp  psnr_metric_eval.cpp
code/src/mutants_eval/: CMakeLists.txt  mutant_eval.cpp  mutant_show.cpp  psnr_eval.cpp
code/src/utils/: CMakeLists.txt  generic_utils.cpp  mat_operations.cpp
code/src/zybo_drivers/: CMakeLists.txt  bas08_zybo.cpp  bas09_zybo.cpp  bas11_zybo.cpp  bc12_zybo.cpp  cb11_zybo.cpp  hw_eval.cpp  hw_show.cpp  pea12_zybo.cpp  pea14_zybo.cpp  zybo_mssim_metric_eval.cpp  zybo_psnr_metric_eval.cpp
code/src/zybo_drivers/zybo_metrics/: CMakeLists.txt  zybo_ad_metric_eval.cpp  zybo_dssim_metric_eval.cpp  zybo_md_metric_eval.cpp  zybo_mse_metric_eval.cpp  zybo_mssim_metric_eval.cpp  zybo_psnr_metric_eval.cpp
include/: axdct_algorithms.h  main.h
include/algorithms/: BAS09.h  BC12.h
src/: CMakeLists.txt  main.cpp
src/algorithms/: BAS09.cpp  BC12.cpp  CMakeLists.txt
